# shards

./: .MonsterSpace196k.aux  .TenfoldBridges.aux  .gitignore  .gitmodules  2023  2024  71_ARCHITECTURES.md  9muses.py  AIRDROP_SOP.md  AllIRsAreMonster.v  AllIRsAreMonster.vo  BIT_STRIPPING.md  CHORD_FIXED_POINTS.md  COMPUTER_TELESCOPE.md  COMPUTE_PARTITION.md  Cargo.toml  FRENS.md  FRENS_PHONE_NUMBER.md  FREN_GRAPH.md  FUNCTION_SPEED_LOCATION.md  FileComposition.lean  GAME_INVENTORY.md  GRIESS_EYE.lean  GRIESS_EYE.md  HACKATHON_42_43.md  HACKATHON_INTEGRATION.md  HECKE_CLOCK.md  INTERGALACTIC.md  INTROSPECTION.md  LMFDBMathlibEquivalence.lean  LMFDB_EMOJI.lean  LMFDB_MATHLIB_EQUIVALENCE.md  LMFDB_SHARDING_SYSTEM.md  Lean4Introspector.lean  Lean4IntrospectorTest.lean  MAME_POINTER_COMPRESSION.md  MAME_SPACETIME_TUNER.md  METAMEME_COIN.md  MONSTER_BERT.md  MONSTER_BRAINROT_VECTOR.md  (+227 more)
.buildkite/: pipeline.yml
arcade/: Cargo_0.toml  Cargo_1.toml  Cargo_10.toml  Cargo_11.toml  Cargo_12.toml  Cargo_13.toml  Cargo_14.toml  Cargo_15.toml  Cargo_16.toml  Cargo_17.toml  Cargo_18.toml  Cargo_19.toml  Cargo_2.toml  Cargo_20.toml  Cargo_21.toml  Cargo_22.toml  Cargo_23.toml  Cargo_24.toml  Cargo_25.toml  Cargo_26.toml  Cargo_27.toml  Cargo_28.toml  Cargo_29.toml  Cargo_3.toml  Cargo_30.toml  Cargo_31.toml  Cargo_32.toml  Cargo_33.toml  Cargo_34.toml  Cargo_35.toml  Cargo_36.toml  Cargo_37.toml  Cargo_38.toml  Cargo_39.toml  Cargo_4.toml  Cargo_40.toml  Cargo_41.toml  Cargo_42.toml  Cargo_43.toml  Cargo_44.toml  (+31 more)
battle-royale/: README.md  flake.nix
bbs-8080/: Cargo.toml  README.md  flake.nix
bbs-8080-zos/: README.md  brainfuck_tapes.json  flake.nix  generate_bf_tapes.py
circuits/: universal_coords.circom
docs/: 71_CRYPTO_PORTFOLIO.md  71_INVITES.md  71_SHARD_CHALLENGES.md  71_SHARD_RDFA_RECONSTRUCTION.md  AGENT_EVAL.md  AIRDROP_SOP.md  ARCADE_PERFORMANCE_TUNING.md  ARRAY_INDEXES_SHORTEST_POINTERS.md  BBS_WASM_CLOSURE.md  BLACK_HOLE_SHARDS.md  BOT_TASKS.md  BRAINFUCK_INTEGRATION.md  BREAKING_BIT.md  CHALLENGE_RECON.md  CICADA71.md  CICADA71_LEVEL0.md  CICADA71_LEVEL0_BOOTSTRAP.md  CICADA71_LEVEL1_JINVARIANT.md  CICADA71_LEVEL2_HAYSTACK.md  CICADA71_LEVEL3_TIKKUN.md  CICADA71_LEVEL4_NAME_OF_GOD.md  CICADA71_LEVEL5_DIAL_JINVARIANT.md  CONTRIBUTING.md  COQ_ROCQ_MONSTER.md  CRYPTO_TESTNETS.md  CTC_PDA_BUMP.md  DEDUPLICATION_REVIEW.md  DEEP_INTROSPECTION_LOCATION.md  DENSEST_INFORMATION_UNIT.md  DEPLOYMENT.md  DEVILS_BRIDGE_EXCLUDED_PRIMES.md  DIAL_JINVARIANT_URL.md  DMZ_WORLD.md  DOCS_INDEX.md  DOCUMENTATION.md  DUPLICATE_CODE_SURVEY.md  DUPLICATE_MERGE_STRATEGY.md  ENOCHIAN_JINVARIANT.md  FREE_TIER_AI.md  FRENS.md  (+111 more)
doorgame/: Cargo.toml  DISCORD_POST.md  LANDING_PAGE.html  README.md  TELEGRAM_POST.md  TWITTER_POST.md  demos.html  launch_watchers.py  launch_watchers.sh  lobster_hunt_demo.py  mcts_ai_game.html  p2p_gossip.html  scoreboard.py  scoreboard.rs  test_game.py
emoji-wasm/: README.md  translate.js  translator.html  translator.js  translator.mzn
frens/: kanebra_26qVRWZg.json  kanebra_26qVRWZg.json.intel
gabulab/: INVITE_KIRO.md  auto_load_gist.html  fleet_map.json  game_status.py  game_status.txt  gamestate.json  gamestate_erdfa.json  gamestate_share.html  harmonic_web.json  import_repos.py  monster_perf_analyze.py  monster_trap.py  monster_walk_sampler.py  monster_walk_samples.json  promptbook_morse_tapes.json  promptbook_to_morse.py  repo_harmonic_analysis.json  rooster_telegram.txt  run_optimization.py  save_gamestate_url.py  send_telegram.py  shard_packfile_constants.py  ship_locator.py  start_p2p_match.sh  transmission_demo.json  trap_network.json
harbot-proof-system/: README.md  create_monster_network.py  emoji_tape_proof.py  flake.nix  generate_all_forms.py  generate_composite_witness.py  monster_walk_proof.py  pipelight.toml
harbot-proof-system/rust-core/: Cargo.toml
harbot-proof-system/rust-core/src/: lib.rs  mycelium_path.rs
invites/: shard00_LangChain.txt  shard01_LangGraph.txt  shard02_AutoGen.txt  shard03_CrewAI.txt  shard04_Semantic_Kernel.txt  shard05_LlamaIndex.txt  shard06_Haystack.txt  shard07_AutoGPT.txt  shard08_OpenAI_Agents.txt  shard09_Anthropic_Claude.txt  shard10_PydanticAI.txt  shard11_smolagents.txt  shard12_Agno.txt  shard13_Botpress.txt  shard14_Rasa.txt  shard15_SuperAGI.txt  shard16_BabyAGI.txt  shard17_AgentGPT.txt  shard18_MetaGPT.txt  shard19_CAMEL.txt  shard20_Transformers_Agents.txt  shard21_LangSmith.txt  shard22_Flowise.txt  shard23_Dify.txt  shard24_Dust.txt  shard25_Fixie.txt  shard26_Relevance_AI.txt  shard27_Lindy.txt  shard28_Zapier_Central.txt  shard29_n8n_AI_Agents.txt  shard30_ReAct.txt  shard31_Reflexion.txt  shard32_Tree_of_Thoughts.txt  shard33_Graph_of_Thoughts.txt  shard34_Voyager.txt  shard35_WebArena.txt  shard36_SWE-agent.txt  shard37_OpenDevin.txt  shard38_GPT-Engineer.txt  shard39_Aider.txt  (+33 more)
meme-detector/: Cargo.toml
meme-detector/src/: lib.rs
moltbot-observatory/: Cargo.toml  discover_moltbots.py  moltbot_forks.json  moltbot_instances.json  moltbot_repos.json
parquet-gossip/: Cargo.toml  README.md
parquet-gossip/src/: main.rs
qbert-battle-arena/: Cargo.toml
qbert-battle-arena/src/: lib.rs  main.rs  qbert_loadout_editor.rs
rust_tools/: Cargo.toml
shard0/cryptanalysis/: Cargo.toml  flake.nix
shard0/cryptanalysis/src/: algebraic.rs  differential.rs  frequency.rs  main.rs
shard0/hash/: Cargo.toml  flake.nix  launch-shards.sh
shard0/hash/src/: main.rs  resource.rs
shard0/recon/: Cargo.toml
shard0/recon/src/: generate_shards.rs  main.rs
shard0/zx81-rust/: Cargo.toml  README.md  build-cassette.sh  cassette_encoder.py  flake.nix
shard0/zx81-rust/src/: main.rs
shard58/bisque/: Cargo.toml
shard58/bisque/src/: lib.rs
shard58/harbot/: Cargo.toml
shard58/harbot/src/: lib.rs
swab-deck/: Cargo.toml
zos-server/: Cargo.toml  wg-zone42.conf.example  zos-server.service.example
zos-server/plugins/j-invariant/: Cargo.toml
zos-server/plugins/j-invariant/proofs/: constraints.mzn  hecke.lean  maass.pl
zos-server/plugins/j-invariant/src/: lib.rs
zos-server/src/: main.rs  plugin_tape.rs
(+756 files in other folders)
