[workspace]
members = [
    "shard0/recon",
    "agents/evaluate",
    "agents/leaderboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
parquet = "53.0"
arrow = "53.0"
flate2 = "1.0"
sha2 = "0.10"
chrono = "0.4"
