[package]
name = "monster-walk-bits"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
rand = "0.8"

[[bin]]
name = "monster_walk_bits"
path = "monster_walk_bits.rs"

[[bin]]
name = "monster_ternary"
path = "monster_ternary.rs"

[[bin]]
name = "monster_quintary"
path = "monster_quintary.rs"

[[bin]]
name = "monster_septenary"
path = "monster_septenary.rs"

[[bin]]
name = "monster_crown"
path = "monster_crown.rs"

[[bin]]
name = "monster_market_ga"
path = "monster_market_ga.rs"
