[package]
name = "moltbot-observatory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serenity = "0.12"  # Discord
anchor-lang = "0.29"  # Solana
anchor-spl = "0.29"
solana-sdk = "1.17"
bellman = "0.14"  # ZK proofs
hex = "0.4"

[[bin]]
name = "observer"
path = "src/bin/observer.rs"

[[bin]]
name = "zk-witness"
path = "src/bin/zk_witness.rs"

[[bin]]
name = "markets"
path = "src/bin/markets.rs"

[[bin]]
name = "shard-bots"
path = "src/bin/shard_bots.rs"
