[package]
name = "parquet-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = "52.0"
arrow = "52.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "harbot"
path = "src/main.rs"
