[package]
name = "qbert-battle-arena"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qbert-arena"
path = "src/main.rs"

[[bin]]
name = "loadout-editor"
path = "src/bin/loadout_editor.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
