[package]
name = "swab-deck"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.4"
num-complex = "0.4"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "swab-deck"
path = "src/main.rs"
