[package]
name = "harbot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "harbot-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "harbot-gossip"
path = "src/bin/gossip.rs"

[[bin]]
name = "harbot-mcts"
path = "src/bin/mcts.rs"
