[package]
name = "shard-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = "53"
arrow = "53"
chrono = "0.4"
walkdir = "2"
sha2 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
sha1 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
ripemd = "0.1"
whirlpool = "0.10"
groestl = "0.10"
streebog = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh32", "xxh64"] }
seahash = "4.1"
fnv = "1.0"
twox-hash = "1.6"
ahash = "0.8"
siphasher = "1.0"
rustc-hash = "2.0"
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"
