[package]
name = "challenge-recon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["socks", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
parquet = "53.0"
arrow = "53.0"
flate2 = "1.0"
sha2 = "0.10"
