[package]
name = "zx81-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cassette_encoder"
path = "src/bin/cassette_encoder.rs"

[[bin]]
name = "tape_to_url"
path = "src/bin/tape_to_url.rs"

[dependencies]
urlencoding = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
