[package]
name = "bisque"
version = "0.1.0"
edition = "2021"
description = "Secure brainrot scrubbing harmonic decoder for lobster brain soup"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[lib]
name = "bisque"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "Response"] }

[profile.release]
opt-level = "z"
lto = true
