[package]
name = "harbot"
version = "0.1.0"
edition = "2021"
description = "The Great Lobster Hunting Bisque Collector for Harbor"
license = "MIT"

[dependencies]
bisque = { path = "../bisque" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "harbot"
path = "src/lib.rs"
